# fast-api-rest-api

./: .env  .env.db  .gitignore  Dockerfile  README.md  REST API.postman_collection_adastra.json  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
rest_api_project/: main.py
rest_api_project/api/: deps.py
rest_api_project/api/endpoints/: auth.py  users.py
rest_api_project/core/: config.py  security.py
rest_api_project/db/: base.py  init_db.py  session.py
rest_api_project/handlers/: token.py  user.py
rest_api_project/models/: token.py  user.py
rest_api_project/schemas/: pagination.py  user.py
rest_api_project/tests/: auth_tests.py  users_tests.py
